package com.upm.master.mastermind.view;

import com.upm.master.mastermind.controller.model.ModelController;

public interface ViewsContainer {
   void updateView(ModelController controller);
}
