@startuml

package mastermind {
    class MasterMind
}

package mastermind.model {
    class Configuration
    class Game
    class State
}

package mastermind.view {
    interface ViewsContainer
}

package mastermind.controller {
    class ControllersContainer
}

MasterMind *-> Game
MasterMind *-> State
MasterMind *-up-> ControllersContainer
MasterMind --> Configuration
MasterMind --> ViewsContainer



@enduml


